[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lang_chain_learn"
version = "0.1.0"
description = "LangChain learning project"
authors = [{name="wendson", email="wendson@example.com"}]
dependencies = [
    "requests>=2.31.0",
    "langchain",
    "openai",
    "python-dotenv",
    "langchain_openai",

]

[tool.setuptools.packages.find]
where = ["."]